Test Org - Speridian/src/objects/BA_Product_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>ba_AttributeCategory__c</fullName>
        <label>Attribute Category</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AttributeCode__c</fullName>
        <label>Attribute Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AttributeDesc__c</fullName>
        <label>Attribute Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_AttributeINNDisplayValue__c</fullName>
        <label>Attribute INN Display Value</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ba_AttributeId__c</fullName>
        <label>Attribute Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AttributeName__c</fullName>
        <label>Attribute Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ba_AttributeOONDisplayValue__c</fullName>
        <label>Attribute OON Display Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ba_ComponentCode__c</fullName>
        <label>Component Code</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ba_ComponentName__c</fullName>
        <label>Component Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ba_ComponentType__c</fullName>
        <label>Component Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Package_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_DisplayOnWeb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display On Web Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_KeyAttribute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Attribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_LastUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Package_Attributes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_LastUpdatedDate__c</fullName>
        <label>Updated Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Package__c</fullName>
        <label>Predefined Packages</label>
        <referenceTo>BA_Product_Flat__c</referenceTo>
        <relationshipLabel>Package Attributes</relationshipLabel>
        <relationshipName>Package_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ba_VariantCode__c</fullName>
        <label>Variant Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Package Attributes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Attributes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>